--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "\"# roguelike-pumpkin-patch\"",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "webpack"
   },
   "repository": {
     "type": "git",
@@ -28,6 +29,7 @@
     "sass-loader": "^11.0.1",
     "ts-loader": "^8.0.17",
     "typescript": "^4.1.5",
-    "webpack": "^5.21.2"
+    "webpack": "^5.21.2",
+    "webpack-cli": "^4.5.0"
   }
 }
