--- a/package.json
+++ b/package.json
@@ -19,14 +19,13 @@
   },
   "homepage": "https://github.com/laurheth/roguelike-pumpkin-patch#readme",
   "devDependencies": {
-    "@types/mini-css-extract-plugin": "^1.2.2",
     "@types/sass": "^1.16.0",
     "@types/sass-loader": "^8.0.0",
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^5.0.2",
-    "mini-css-extract-plugin": "^1.3.6",
     "sass": "^1.32.7",
     "sass-loader": "^11.0.1",
+    "style-loader": "^2.0.0",
     "ts-loader": "^8.0.17",
     "typescript": "^4.1.5",
     "webpack": "^5.21.2",
