--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "sass": "^1.32.7",
     "sass-loader": "^11.0.1",
     "style-loader": "^2.0.0",
+    "ts-declaration-webpack-plugin": "^1.2.3",
     "ts-loader": "^8.0.17",
     "typescript": "^4.1.5",
     "webpack": "^5.21.2",
