--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,9 @@
       "typeRoots": [
         "src/@customTypes",
         "node_modules/@types"
-      ]
+      ],
+      "declaration": true,
+      // "declarationMap": true,
+      "declarationDir": "./dist/"
     }
   }
