--- a/package.json
+++ b/package.json
@@ -2,10 +2,14 @@
   "name": "roguelike-pumpkin-patch",
   "version": "1.0.0",
   "description": "\"# roguelike-pumpkin-patch\"",
-  "main": "index.js",
+  "main": "dist/roguelike-pumpkin-patch.js",
+  "module": "lib/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack"
+    "bundle": "webpack",
+    "transpile": "tsc",
+    "prebuild": "rm -rf dist && rm -rf lib",
+    "build": "npm run transpile && npm run bundle"
   },
   "repository": {
     "type": "git",
@@ -19,13 +23,7 @@
   },
   "homepage": "https://github.com/laurheth/roguelike-pumpkin-patch#readme",
   "devDependencies": {
-    "@types/sass": "^1.16.0",
-    "@types/sass-loader": "^8.0.0",
     "clean-webpack-plugin": "^3.0.0",
-    "css-loader": "^5.0.2",
-    "sass": "^1.32.7",
-    "sass-loader": "^11.0.1",
-    "style-loader": "^2.0.0",
     "ts-loader": "^8.0.17",
     "typescript": "^4.1.5",
     "webpack": "^5.21.2",
