--- a/tsconfig.webpack.json
+++ b/tsconfig.webpack.json
@@ -7,7 +7,7 @@
       "target": "es5",
       "allowJs": true,
       "baseUrl": "./src",
-      "declaration": true,
+      "declaration": false,
       "skipLibCheck": true,
     },
     "files": [
