--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "module": "lib/index.js",
   "types": "lib/index.d.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "bundle": "webpack",
     "transpile": "tsc",
     "prebuild": "rm -rf dist && rm -rf lib",
@@ -25,6 +25,8 @@
   "homepage": "https://github.com/laurheth/roguelike-pumpkin-patch#readme",
   "devDependencies": {
     "clean-webpack-plugin": "^3.0.0",
+    "jest": "^26.6.3",
+    "ts-jest": "^26.5.1",
     "ts-loader": "^8.0.17",
     "typescript": "^4.1.5",
     "webpack": "^5.21.2",
