--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,7 @@
       "baseUrl": "./src",
       "declaration": true,
       "skipLibCheck": true,
+      "esModuleInterop": true,
     },
     "files": [
       "./src/index.ts"
